crates/slipway-core/tests/compile_fail/parent_local_explicit_border.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/parent_local_explicit_border.rs:9:9
  |
4 |     let _ = ChildLayoutPlan::explicit_border(
  |             -------------------------------- arguments to this function are incorrect
...
9 |         wrong_space,
  |         ^^^^^^^^^^^ expected `ContentLocalRect`, found `ParentLocalRect`
  |
note: associated function defined here
 --> src/lib.rs
  |
  |     pub fn explicit_border(
  |            ^^^^^^^^^^^^^^^
